--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
 locust==2.15.1
 faker==18.13.0
 behave==1.2.6
-pytest==7.4.0
-allure-behave==2.13.2
-jinja2==3.1.5
-pandas==2.0.3
+behave-html-formatter
+
